--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Gooey Hover Effects on Images with Three.js | Codrops</title>
-    <meta name="description" content="Demo for the tutorial on 'Gooey Hover Effect on Images with Three.js'" />
-    <meta name="keywords" content="threejs, webgl, hover, gooey, effect, hover, image, card, tutorial, demo" />
-    <meta name="author" content="Arno Di Nunzio" />
+    <title>digital playground no4</title>
+    <meta name="description" content="portfolio - brian yom" />
+    <meta name="author" content="brian yom" />
     <link rel="shortcut icon" href="favicon.ico">
     <link rel="stylesheet" href="https://use.typekit.net/lma7zwj.css">
     <link rel="stylesheet" type="text/css" href="dist/app.css" />
@@ -17,20 +16,29 @@
     supportsCssVars() || alert("Please view this demo in a modern browser that supports CSS Variables.");
     </script>
     <script src="dist/app.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Nova+Square" rel="stylesheet">
 </head>
 
 <body class="demo-1">
     <main>
-        <div class="message">This is a hover effects demo, please view on desktop.</div>
+        <div class="message">view on desktop</div>
         <div class="frame">
             <div class="frame__links">
-                <a href="https://github.com/Aqro/gooey-hover-codrops">Github</a>
-                <a href="http://tympanus.net/Tutorials/MotionHoverEffects/">Previous Demo</a>
-                <a href="https://tympanus.net/codrops/?p=43947">Article</a>
+                <a href="#">yom</a>
+                <a href="#">resume</a>
+                <a href="#">?</a>
             </div>
-            <div class="frame__demos">Gooey hover effects</div>
         </div>
-        <h1 class="page-title | title">What's your next <span class="slideshow__title__offset | title__offset">destination?</span></h1>
+        <div class="frame__footer">
+            <div class="footer__links">
+                <a href="#">1</a>
+                <a href="#">2</a>
+                <a href="#">skip a few</a>
+                <a href="#">99</a>
+                <a href="#">100</a>
+            </div>
+        </div>
+        <h1 class="page-title | title">let's go <span class="slideshow__title__offset | title__offset">on a journey</span></h1>
         <section class="content | scrollarea-ctn">
             <div class="scrollarea | slideshow">
                 <ul class="slideshow-list">
@@ -41,9 +49,9 @@
                                     <img src="dist/img/tiles/woods/base.jpg" data-hover="dist/img/tiles/woods/hover.jpg" alt="Woods & Forests" class="tile__img">
                                 </figure>
                                 <div class="tile__content">
-                                    <h2 class="tile__title | title title--medium ">Woods & <span class="title__offset title__offset--medium">Forests</span></h2>
+                                    <h2 class="tile__title | title title--medium ">no.1<span class="title__offset title__offset--medium">Next Retail</span></h2>
                                     <div class="tile__cta">
-                                        <span class="btn-inline">See more</span>
+                                        <span class="btn-inline">more</span>
                                     </div>
                                 </div>
                             </a>
@@ -56,9 +64,9 @@
                                     <img src="dist/img/tiles/rocks/base.jpg" data-hover="dist/img/tiles/rocks/hover.jpg" alt="Rocks & Mountains" class="tile__img">
                                 </figure>
                                 <div class="tile__content">
-                                    <h2 class="tile__title | title title--medium ">Rocks & <span class="title__offset title__offset--medium">Mountains</span></h2>
+                                    <h2 class="tile__title | title title--medium ">no.2<span class="title__offset title__offset--medium">patron</span></h2>
                                     <div class="tile__cta">
-                                        <span class="btn-inline">See more</span>
+                                        <span class="btn-inline">more</span>
                                     </div>
                                 </div>
                             </a>
@@ -71,11 +79,10 @@
                                     <img src="dist/img/tiles/cities/base.jpg" data-hover="dist/img/tiles/cities/hover.jpg" alt="Cities & Skylines" class="tile__img">
                                 </figure>
                                 <div class="tile__content">
-                                    <h2 class="tile__title | title title--medium ">Cities & <span class="title__offset title__offset--medium">Skylines</span>
-                                        </spa>
+                                    <h2 class="tile__title | title title--medium ">no.3<span class="title__offset title__offset--medium">sojo</span>
                                     </h2>
                                     <div class="tile__cta">
-                                        <span class="btn-inline">See more</span>
+                                        <span class="btn-inline">more</span>
                                     </div>
                                 </div>
                             </a>
@@ -88,11 +95,10 @@
                                     <img src="dist/img/tiles/deserts/base.jpg" data-hover="dist/img/tiles/deserts/hover.jpg" alt="SAND & DESERTS" class="tile__img">
                                 </figure>
                                 <div class="tile__content">
-                                    <h2 class="tile__title | title title--medium ">Sand & <span class="title__offset title__offset--medium">Deserts</span>
-                                        </spa>
+                                    <h2 class="tile__title | title title--medium ">no.4<span class="title__offset title__offset--medium">personal</span>
                                     </h2>
                                     <div class="tile__cta">
-                                        <span class="btn-inline">See more</span>
+                                        <span class="btn-inline">more</span>
                                     </div>
                                 </div>
                             </a>
@@ -105,11 +111,10 @@
                                     <img src="dist/img/tiles/snow/base.jpg" data-hover="dist/img/tiles/snow/hover.jpg" alt="Snow & Mountains" class="tile__img">
                                 </figure>
                                 <div class="tile__content">
-                                    <h2 class="tile__title | title title--medium ">Snow & <span class="title__offset title__offset--medium">Mountains</span>
-                                        </spa>
+                                    <h2 class="tile__title | title title--medium ">no.5<span class="title__offset title__offset--medium">orobos</span>
                                     </h2>
                                     <div class="tile__cta">
-                                        <span class="btn-inline">See more</span>
+                                        <span class="btn-inline">more</span>
                                     </div>
                                 </div>
                             </a>
@@ -129,9 +134,7 @@
                 </button>
                 <div class="detail-view__content">
                     <h2 class="detail-view__title | title title--large">Woods & forests</h2>
-                    <p>In recent years people have realized the importance of proper diet and exercise, and recent surveys show that over the last 20 years people are eating better and working out more often, resulting in people living longer, but people are still lacking in their understanding that their mental well being is just as important as their physical health.</p>
-                    <p>Today most people get on average 4 to 6 hours of exercise every day, and make sure that everything they put in their mouths is not filled with sugars or preservatives, but they pay no attention to their mental health, no vacations, not even the occasional long weekend, 60 hour weeks, taking work home with them and even working weekends. All of this for hopes of one day getting that big promotion. What good will it do you when your brain overloads and you have a breakdown in the office.</p>
-                    <p>In the end your physical health will suffer no matter how well you eat and how often you exercise. You will wind up with high blood pressure, stress and tension all of which raises the chances of you having a stroke or heart attack. In hopes of helping you avoid this I am providing you with the things I do to keep my mental health in tip top condition.</p>
+                    <p>In recent years people have realized the importance of proper diet and exercise, and recent surveys show that over the last 20 years people are eating better and working out more often, resulting in people living longer, but people are still lacking in their understanding that their mental well being is just as important as their physical health. Today most people get on average 4 to 6 hours of exercise every day, and make sure that everything they put in their mouths is not filled with sugars or preservatives, but they pay no attention to their mental health, no vacations, not even the occasional long weekend, 60 hour weeks, taking work home with them and even working weekends. All of this for hopes of one day getting that big promotion. What good will it do you when your brain overloads and you have a breakdown in the office. In the end your physical health will suffer no matter how well you eat and how often you exercise. You will wind up with high blood pressure, stress and tension all of which raises the chances of you having a stroke or heart attack. In hopes of helping you avoid this I am providing you with the things I do to keep my mental health in tip top condition.</p>
                 </div>
             </div>
         </aside>
